# MDLViewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/Materials/AnimeGirl/: AnimeMaterial.xml
Data/UI/Materials/AnimeGirl/: Anime_charcter.mdl
Data/UI/Materials/BluePrintM/: BluePrint.xml
